# gstreamer-mcp

./: Cargo.toml  README.md  TODO.md  codebase-review-report.md
PRPs/: 00-command-line-modes.md  01-basic-mcp-server-element-discovery.md  02-pipeline-launch-control.md  03-element-suggestions-similarity.md  04-gstreamer-rs-programming-assistant.md  05-gst-plugins-rs-element-development.md  06-seek-and-playback-control.md  07-cli-arguments-stdio-workaround.md  08-tool-descriptions-audit.md
scripts/: test_server.bat  test_simple.bat
src/: bus_handler.rs  cli.rs  config.rs  discovery.rs  error.rs  handler.rs  lib.rs  main.rs  pipeline.rs  repl.rs  tool_registry.rs
