[package]
name = "gstreamer-mcp"
version = "0.1.0"
edition = "2021"
description = "A Model Context Protocol (MCP) server for GStreamer element discovery and pipeline management"

[dependencies]
# MCP SDK
rmcp = { version = "0.6.0", features = ["server", "transport-io", "macros", "schemars"] }
rmcp-macros = { version = "0.6.0" }

# GStreamer bindings
gstreamer = "0.24.1"
gstreamer-pbutils = "0.24.0"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"

# Error handling
thiserror = "2.0.16"
anyhow = "1.0.99"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Schema generation
schemars = "1.0.4"

# Utilities
once_cell = "1.21.3"
regex = "1.11.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }
rustyline = "14.0"
